# adlign-marketing-compliance-analyst

./: .env.example  .gitignore  DEPLOY.md  README.md  docker-compose.prod.yml
.github/workflows/: ci-cd.yml  deploy-backend.yml
apps/api/: .dockerignore  Dockerfile  docker-entrypoint.sh  pyproject.toml
apps/web/: .dockerignore  .gitignore  Dockerfile  next.config.ts  package.json  (+2 more)
deploy/: Caddyfile  make_seed.sh
project-context/: 00_kickoff_scope_and_handoff_2026-07-08.md  01_spec_v1_2026-07-09.md  02_handoff_to_claude_code_v1_2026-07-09.md  04_trial_context_shiboleth_2026-07-08.md  05_shibboleth_problem_context_and_scorecard_2026-07-09.md  06_prd_shiboleth_v1_2026-07-09.md  07_architecture_v1_2026-07-09.md  08_mvp1_build_brief_2026-07-09.md  09_mvp1_build_report_2026-07-10.md  09_mvp1_knowledge_base_2026-07-10.md  10_metrics_stakeholder_explainer_2026-07-10.md  11_product_roadmap_increments_2026-07-13.md  DESIGN.md  README.md
project-context/ground-truth-v2/harness/: pyproject.toml
project-context/ground-truth-v2/harness/src/gt2/: __init__.py  assemble.py  capture.py  cli.py  config.py  consensus.py  discover.py  judge.py  llm.py  models.py  rules.py  screen.py  synthetics.py  textnorm.py
tools/snapshot-capture/: .env.example  README.md  pyproject.toml
tools/snapshot-capture/src/snapshot_capture/: __init__.py  cli.py  config.py  discover.py  manifest.py  models.py  quality.py  snapshot_io.py  triggers.py
tools/snapshot-capture/src/snapshot_capture/fetchers/: __init__.py  apify_fetcher.py  base.py  crawl4ai_fetcher.py  hyperbrowser_fetcher.py
tools/snapshot-capture/tests/: test_snapshot_capture.py
(+398 files in other folders)
