# ---------------------------------------------------------------------------
# snapshot-capture — one-shot ground-truth capture tool for Shiboleth.
# Isolated tool; its crawl4ai core is the seed of the product ingestion service.
# Python 3.12, uv-managed. Not part of the app packages under code/apps/.
# ---------------------------------------------------------------------------
[project]
name = "snapshot-capture"
version = "0.1.0"
description = "One-shot snapshot capture for TurboTax ground-truth pages (crawl4ai primary; Hyperbrowser/Apify fallbacks)."
requires-python = ">=3.12,<3.13"
dependencies = [
    "crawl4ai>=0.9.1",
    "hyperbrowser>=0.90",
    "apify-client>=3.0",
    "python-dotenv>=1.0",
]

[project.scripts]
snapshot-capture = "snapshot_capture.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/snapshot_capture"]
