[project]
name = "gt2"
version = "0.1.0"
description = "Ground truth v2 harness: semantic discovery + 3-LLM judge panel (Shiboleth)"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.3",
    "pydantic>=2",
    "python-dotenv>=1",
    "crawl4ai>=0.6",
    "httpx>=0.27",
]

[project.scripts]
gt2 = "gt2.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gt2"]
